tests/exec/pos/string_loop_concat.hsc
fn main() {
  let s = "";
  for (let i=0; i<3; i++) {
    s = s + "x";
  }
  write(s);
}
