tests/exec/neg/error_exit3.hsc
fn main() {
  write("err3");
  exit(3);
}
